# yarkov

./: .gitignore  Makefile  exploration_dashboard.py  main.py  pyproject.toml
examples/: comparison.py  even-dist.py  grid_search.py  null-dist.py  param_search.py  prob_dist_fit.py  queen-bee.py
probate/: pyproject.toml
probate/src/: __init.py__  sim.py  vis.py
probate/src/probate/: __init__.py  sim.py  vis.py
scripts/: even-dist.py  lhs.py  null-dist.py  queen-bee.py  visualizer.py
src/yarkov/: __init__.py  param_search.py  sim.py
