[project]
name = "probate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eweix", email = "elliott@weix.us" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "rich>=14.3.3",
]

[project.scripts]
probate = "probate:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
